fix untracted files

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,11 +43,11 @@
                     android:layout_marginLeft="@dimen/dp_16"
                     android:layout_toRightOf="@+id/tv_label_tab"
                     android:background="@color/white"
-                    android:textColor="@color/state_press_black"
                     android:gravity="left|center_vertical"
                     android:onClick="onClickTabLayoutTop"
                     android:text="TabLayout 顶部标签页"
                     android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
                     android:textSize="@dimen/sp_16" />
 
                 <Button
@@ -59,11 +59,11 @@
                     android:layout_below="@id/tv_label_tab"
                     android:layout_toRightOf="@id/tv_label_tab"
                     android:background="@color/white"
-                    android:textColor="@color/state_press_black"
                     android:gravity="left|center_vertical"
                     android:onClick="onClickTabLayoutBottom"
                     android:text="TabLayout 底部菜单页"
                     android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
                     android:textSize="@dimen/sp_16" />
 
                 <View
@@ -101,18 +101,18 @@
                     android:layout_marginLeft="@dimen/dp_16"
                     android:layout_toRightOf="@+id/tv_label_snack"
                     android:background="@color/white"
-                    android:textColor="@color/state_press_black"
                     android:gravity="left|center_vertical"
                     android:onClick="onClickSnackbar"
                     android:text="Snackbar"
                     android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
                     android:textSize="@dimen/sp_16" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/px_1"
-                    android:layout_below="@id/tv_label_snack"
                     android:layout_alignLeft="@id/btn_tab_snack"
+                    android:layout_below="@id/tv_label_snack"
                     android:layout_marginTop="@dimen/dp_16"
                     android:background="@color/gray" />
 
@@ -143,19 +143,19 @@
                     android:layout_marginLeft="@dimen/dp_16"
                     android:layout_toRightOf="@+id/tv_label_fab"
                     android:background="@color/white"
-                    android:textColor="@color/state_press_black"
                     android:gravity="left|center_vertical"
                     android:onClick="onClickFab"
                     android:text="FloatingActionButton"
                     android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
                     android:textSize="@dimen/sp_16" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/px_1"
+                    android:layout_alignLeft="@id/btn_tab_fab"
                     android:layout_below="@id/tv_label_fab"
                     android:layout_marginTop="@dimen/dp_16"
-                    android:layout_alignLeft="@id/btn_tab_fab"
                     android:background="@color/gray" />
 
             </RelativeLayout>
@@ -185,20 +185,20 @@
                     android:layout_marginLeft="@dimen/dp_16"
                     android:layout_toRightOf="@+id/tv_label_abl"
                     android:background="@color/white"
-                    android:textColor="@color/state_press_black"
                     android:gravity="left|center_vertical"
                     android:onClick="onClickAbl"
                     android:text="AppBarLayout"
                     android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
                     android:textSize="@dimen/sp_16" />
 
                 <View
                     android:id="@+id/divider_tab_abl"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/px_1"
+                    android:layout_alignLeft="@id/btn_tab_abl"
                     android:layout_below="@id/tv_label_abl"
                     android:layout_marginTop="@dimen/dp_16"
-                    android:layout_alignLeft="@id/btn_tab_abl"
                     android:background="@color/gray" />
 
             </RelativeLayout>
@@ -229,11 +229,11 @@
                     android:layout_marginLeft="@dimen/dp_16"
                     android:layout_toRightOf="@+id/tv_label_cl"
                     android:background="@color/white"
-                    android:textColor="@color/state_press_black"
                     android:gravity="left|center_vertical"
                     android:onClick="onClickBehaviorDependent"
                     android:text="CoordinatorLayout.Behavior 之 Dependent"
                     android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
                     android:textSize="@dimen/sp_16" />
 
                 <Button
@@ -241,15 +241,15 @@
                     style="?borderlessButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_56"
-                    android:layout_marginLeft="@dimen/dp_16"
                     android:layout_below="@id/btn_tab_cl_dependent"
+                    android:layout_marginLeft="@dimen/dp_16"
                     android:layout_toRightOf="@+id/tv_label_cl"
                     android:background="@color/white"
-                    android:textColor="@color/state_press_black"
                     android:gravity="left|center_vertical"
                     android:onClick="onClickBehaviorNested"
                     android:text="CoordinatorLayout.Behavior 之 Nested"
                     android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
                     android:textSize="@dimen/sp_16" />
 
                 <Button
@@ -257,23 +257,65 @@
                     style="?borderlessButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_56"
-                    android:layout_marginLeft="@dimen/dp_16"
                     android:layout_below="@id/btn_tab_cl_nested"
+                    android:layout_marginLeft="@dimen/dp_16"
                     android:layout_toRightOf="@+id/tv_label_cl"
                     android:background="@color/white"
-                    android:textColor="@color/state_press_black"
                     android:gravity="left|center_vertical"
                     android:onClick="onClickBehaviorExpand"
                     android:text="CoordinatorLayout.Behavior 之 拓展案例"
                     android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
                     android:textSize="@dimen/sp_16" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/px_1"
+                    android:layout_alignLeft="@id/btn_tab_cl_nested"
                     android:layout_below="@id/btn_tab_cl_expand"
                     android:layout_marginTop="@dimen/dp_16"
-                    android:layout_alignLeft="@id/btn_tab_cl_nested"
+                    android:background="@color/gray" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:paddingTop="@dimen/dp_16">
+
+                <TextView
+                    android:id="@+id/tv_fragments"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_16"
+                    android:background="@drawable/shape_circle_blue"
+                    android:gravity="center"
+                    android:text="Fragments"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_16" />
+
+                <Button
+                    android:id="@+id/btn_fragments"
+                    style="?borderlessButtonStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_56"
+                    android:layout_marginLeft="@dimen/dp_16"
+                    android:layout_toRightOf="@+id/tv_fragments"
+                    android:background="@color/white"
+                    android:gravity="left|center_vertical"
+                    android:onClick="onClickFragments"
+                    android:text="Fragments"
+                    android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
+                    android:textSize="@dimen/sp_16" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/px_1"
+                    android:layout_alignLeft="@id/btn_fragments"
+                    android:layout_below="@id/tv_fragments"
+                    android:layout_marginTop="@dimen/dp_16"
                     android:background="@color/gray" />
 
             </RelativeLayout>
@@ -303,18 +345,18 @@
                     android:layout_marginLeft="@dimen/dp_16"
                     android:layout_toRightOf="@+id/tv_label_text_input"
                     android:background="@color/white"
-                    android:textColor="@color/state_press_black"
                     android:gravity="left|center_vertical"
                     android:onClick="onClickTextInput"
                     android:text="TextInputLayout"
                     android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
                     android:textSize="@dimen/sp_16" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/px_1"
-                    android:layout_below="@id/tv_label_text_input"
                     android:layout_alignLeft="@id/btn_tab_text_input"
+                    android:layout_below="@id/tv_label_text_input"
                     android:layout_marginTop="@dimen/dp_16"
                     android:background="@color/gray" />
 
@@ -345,18 +387,18 @@
                     android:layout_marginLeft="@dimen/dp_16"
                     android:layout_toRightOf="@+id/tv_label_navigation"
                     android:background="@color/white"
-                    android:textColor="@color/state_press_black"
                     android:gravity="left|center_vertical"
                     android:onClick="onClickBottomNavigation"
                     android:text="BottomNavigation"
                     android:textAllCaps="false"
+                    android:textColor="@color/state_press_black"
                     android:textSize="@dimen/sp_16" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/px_1"
-                    android:layout_below="@id/tv_label_navigation"
                     android:layout_alignLeft="@id/btn_bottom_navigation"
+                    android:layout_below="@id/tv_label_navigation"
                     android:layout_marginTop="@dimen/dp_16"
                     android:background="@color/gray" />
 
